finish with styling NavLink

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -364,6 +364,7 @@ NavLink{
 
       .recipe-logo img{
             width: 3rem;
+            border: 2px solid var(--list-menu-item-color);
       }
 
       .nav-links{
