--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
       --hamburger-color: #fff;
       --list-menu-item-color: #FEC441;
       --list-menu-color: #373634;
@@ -324,7 +324,7 @@
             transition: all 0.3s ease-in-out;
             text-decoration: none;
             background-color: var(--list-menu-item-color);
-                  color: var(--list-menu-color);
+            color: var(--list-menu-color);
 
             &:first-child{
                   border-radius: 0px 10px 0px 10px;
@@ -379,4 +379,4 @@
 
 
 
-
+ */
