Need to un-comment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
       --hamburger-color: #fff;
       --list-menu-item-color: #FEC441;
       --list-menu-color: #373634;
@@ -379,4 +379,4 @@
 
 
 
-
+ */
